--- a/Codigo/MDD_Proyecto_Diabetes_Prediction.ipynb
+++ b/Codigo/MDD_Proyecto_Diabetes_Prediction.ipynb
@@ -16,7 +16,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -61,6 +61,8 @@
       ],
       "source": [
         "import pandas as pd\n",
+        "\n",
+        "# Integrando url del repositorio, para implementar el DataSet\n",
         "url = \"https://raw.githubusercontent.com/AldoVasquez07/MDD_2025_A/refs/heads/main/DataSet/diabetes.csv\"\n",
         "df = pd.read_csv(url)\n",
         "\n",
