Ajustando enlace para obtener el dataset

--- a/Codigo/MDD_Proyecto_Diabetes_Prediction.ipynb
+++ b/Codigo/MDD_Proyecto_Diabetes_Prediction.ipynb
@@ -16,46 +16,59 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "yYgmMSkS0Xfa",
-        "outputId": "d00790ea-8e91-4f79-9718-902f64e7e4d2"
+        "outputId": "93ea426c-6034-4ea7-ffb0-f5745b10ff53"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "     Pregnancies  Glucose  BloodPressure  SkinThickness  Insulin   BMI  \\\n",
-            "0              6      148             72             35        0  33.6   \n",
-            "1              1       85             66             29        0  26.6   \n",
-            "2              8      183             64              0        0  23.3   \n",
-            "3              1       89             66             23       94  28.1   \n",
-            "4              0      137             40             35      168  43.1   \n",
-            "..           ...      ...            ...            ...      ...   ...   \n",
-            "763           10      101             76             48      180  32.9   \n",
-            "764            2      122             70             27        0  36.8   \n",
-            "765            5      121             72             23      112  26.2   \n",
-            "766            1      126             60              0        0  30.1   \n",
-            "767            1       93             70             31        0  30.4   \n",
+            "         id  gender   age  hypertension  heart_disease ever_married  \\\n",
+            "0      9046    Male  67.0             0              1          Yes   \n",
+            "1     51676  Female  61.0             0              0          Yes   \n",
+            "2     31112    Male  80.0             0              1          Yes   \n",
+            "3     60182  Female  49.0             0              0          Yes   \n",
+            "4      1665  Female  79.0             1              0          Yes   \n",
+            "...     ...     ...   ...           ...            ...          ...   \n",
+            "5105  18234  Female  80.0             1              0          Yes   \n",
+            "5106  44873  Female  81.0             0              0          Yes   \n",
+            "5107  19723  Female  35.0             0              0          Yes   \n",
+            "5108  37544    Male  51.0             0              0          Yes   \n",
+            "5109  44679  Female  44.0             0              0          Yes   \n",
             "\n",
-            "     DiabetesPedigreeFunction  Age  Outcome  \n",
-            "0                       0.627   50        1  \n",
-            "1                       0.351   31        0  \n",
-            "2                       0.672   32        1  \n",
-            "3                       0.167   21        0  \n",
-            "4                       2.288   33        1  \n",
-            "..                        ...  ...      ...  \n",
-            "763                     0.171   63        0  \n",
-            "764                     0.340   27        0  \n",
-            "765                     0.245   30        0  \n",
-            "766                     0.349   47        1  \n",
-            "767                     0.315   23        0  \n",
+            "          work_type Residence_type  avg_glucose_level   bmi   smoking_status  \\\n",
+            "0           Private          Urban             228.69  36.6  formerly smoked   \n",
+            "1     Self-employed          Rural             202.21   NaN     never smoked   \n",
+            "2           Private          Rural             105.92  32.5     never smoked   \n",
+            "3           Private          Urban             171.23  34.4           smokes   \n",
+            "4     Self-employed          Rural             174.12  24.0     never smoked   \n",
+            "...             ...            ...                ...   ...              ...   \n",
+            "5105        Private          Urban              83.75   NaN     never smoked   \n",
+            "5106  Self-employed          Urban             125.20  40.0     never smoked   \n",
+            "5107  Self-employed          Rural              82.99  30.6     never smoked   \n",
+            "5108        Private          Rural             166.29  25.6  formerly smoked   \n",
+            "5109       Govt_job          Urban              85.28  26.2          Unknown   \n",
             "\n",
-            "[768 rows x 9 columns]\n"
+            "      stroke  \n",
+            "0          1  \n",
+            "1          1  \n",
+            "2          1  \n",
+            "3          1  \n",
+            "4          1  \n",
+            "...      ...  \n",
+            "5105       0  \n",
+            "5106       0  \n",
+            "5107       0  \n",
+            "5108       0  \n",
+            "5109       0  \n",
+            "\n",
+            "[5110 rows x 12 columns]\n"
           ]
         }
       ],
@@ -63,7 +76,7 @@
         "import pandas as pd\n",
         "\n",
         "# Integrando url del repositorio, para implementar el DataSet\n",
-        "url = \"https://raw.githubusercontent.com/AldoVasquez07/MDD_2025_A/refs/heads/main/DataSet/diabetes.csv\"\n",
+        "url = \"https://raw.githubusercontent.com/AldoVasquez07/MDD_2025_A/refs/heads/main/DataSet/healthcare-dataset-stroke-data.csv\"\n",
         "df = pd.read_csv(url)\n",
         "\n",
         "print(df)"
