Integrando paper más resumen

--- a/Codigo/MDD_Helthcare_Stroke.ipynb
+++ b/Codigo/MDD_Helthcare_Stroke.ipynb
@@ -98,27 +98,32 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Papers para la investigación"
+        "# Paper basado en la computación"
       ],
       "metadata": {
-        "id": "vTW0bf3yu45G"
+        "id": "vlpioCua1f0A"
       }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "* https://www.elsevier.es/es-revista-revista-colombiana-cardiologia-203-articulo-factores-asociados-al-ataque-cerebrovascular-S012056331730061X\n",
+        "El documento analiza distintos algoritmos de Machine Learning para predecir accidentes cerebrovasculares (stroke). Se probaron seis modelos: Regresión Logística, Árbol de Decisión, Bosque Aleatorio, K-Vecinos Cercanos, Máquina de Soporte Vectorial y Naïve Bayes.  \n",
         "\n",
-        "* https://www.revespcardiol.org/es-accidente-vascular-cerebralincidencia-mortalidad-factores-articulo-X0300893200093778\n",
+        "Para el estudio, se usó un dataset de Kaggle con información sobre factores de riesgo. Después del preprocesamiento, los modelos fueron entrenados y evaluados según su precisión. De todos, el mejor resultado lo obtuvo Naïve Bayes, con una precisión de aproximadamente 82%.  \n",
         "\n",
-        "* https://www.redalyc.org/pdf/3684/368446344005.pdf\n",
-        "\n",
-        "* https://www.nhlbi.nih.gov/es/investigaciones/accidente-cerebrovascular\n",
-        "\n",
-        "* https://www.cdc.gov/stroke/es/risk-factors/factores-de-riesgo-de-accidente-cerebrovascular.html"
+        "A pesar de estos resultados, el estudio tiene algunas limitaciones, como el uso de datos tabulares en lugar de imágenes médicas en tiempo real. Se sugiere mejorar la precisión de los modelos usando mejores técnicas de selección de características y más datos relevantes."
       ],
       "metadata": {
-        "id": "mc9m65Y_hZ6q"
+        "id": "Ef23Wxzg6wB9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "https://www.proquest.com/openview/a93395a894d0d154ee39f48aba0d76e6/1?cbl=5444811&pq-origsite=gscholar"
+      ],
+      "metadata": {
+        "id": "O8W6z8Qb1lwh"
       }
     },
     {
@@ -132,14 +137,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 0
+          "height": 424
         },
         "id": "yYgmMSkS0Xfa",
-        "outputId": "c3d7cff2-b653-4ea4-f8b3-b2446f84d239"
+        "outputId": "64915347-14e9-44f1-ce6f-52b747b813ee"
       },
       "outputs": [
         {
@@ -189,7 +194,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-950257c3-bdd9-4c30-85c6-eae00108e092\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-f5a6477c-0424-411e-abd9-823b6efb7ee7\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -395,7 +400,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-950257c3-bdd9-4c30-85c6-eae00108e092')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f5a6477c-0424-411e-abd9-823b6efb7ee7')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -447,12 +452,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-950257c3-bdd9-4c30-85c6-eae00108e092 button.colab-df-convert');\n",
+              "        document.querySelector('#df-f5a6477c-0424-411e-abd9-823b6efb7ee7 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-950257c3-bdd9-4c30-85c6-eae00108e092');\n",
+              "        const element = document.querySelector('#df-f5a6477c-0424-411e-abd9-823b6efb7ee7');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -472,8 +477,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5e06c7d3-1a7f-470f-bce2-360ccc437787\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e06c7d3-1a7f-470f-bce2-360ccc437787')\"\n",
+              "<div id=\"df-bd630a65-5eec-4818-b905-bb80ad7b8467\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-bd630a65-5eec-4818-b905-bb80ad7b8467')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -592,14 +597,14 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5e06c7d3-1a7f-470f-bce2-360ccc437787 button');\n",
+              "        document.querySelector('#df-bd630a65-5eec-4818-b905-bb80ad7b8467 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
               "  </script>\n",
               "</div>\n",
               "\n",
-              "  <div id=\"id_16a17e3a-13da-41f0-9125-b5dd342f7200\">\n",
+              "  <div id=\"id_26a51c4f-cb66-4463-978f-6cb657de9b00\">\n",
               "    <style>\n",
               "      .colab-df-generate {\n",
               "        background-color: #E8F0FE;\n",
@@ -643,7 +648,7 @@
               "    <script>\n",
               "      (() => {\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#id_16a17e3a-13da-41f0-9125-b5dd342f7200 button.colab-df-generate');\n",
+              "        document.querySelector('#id_26a51c4f-cb66-4463-978f-6cb657de9b00 button.colab-df-generate');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
@@ -664,7 +669,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 1
         }
       ],
       "source": [
@@ -675,6 +680,29 @@
         "df = pd.read_csv(url)\n",
         "\n",
         "df"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(min(df.age), max(df.age))"
+      ],
+      "metadata": {
+        "id": "phmapvxW43jV",
+        "outputId": "e03643f6-3836-4189-b277-b4ef0466455a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0.08 82.0\n"
+          ]
+        }
       ]
     },
     {
@@ -697,11 +725,10 @@
         "id": "e5sDwETjvhIE",
         "outputId": "77c0aba3-3834-4ca2-9343-eedb321685ff",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1118,7 +1145,7 @@
         "id": "6KxVFiQn5ZER",
         "outputId": "f53f0095-cef4-45ce-9e09-cca235a13a30"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1206,7 @@
       "metadata": {
         "id": "JtqQopc6-K4w"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1203,7 +1230,7 @@
       "metadata": {
         "id": "kImxJXyj-gMh"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1219,7 +1246,7 @@
         "id": "IRed-TtZAvDB",
         "outputId": "a99fd990-7278-41ac-d461-63d13cc54168"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
